@@ -106,6 +106,7 @@
  * - Bryan Kirk         - Better GUI appearance (new list of drives).
  *                        Autodefrag feature (not implemented yet).
  * - Christopher Naegel - Driver loading on Vista problem's partial solution.
+ * - Craig Oakes        - Hint about case mismatch of configuration dialog help files
  * - Dario Raparelli    - NT 4.0 support.
  * - Jan Loncik         - x64 native support. Better filter presets.
  * - Jim Laski          - System fonts and visual styles for graphical interface.
